--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-core": "*",
     "gulp": "*",
     "gulp-autoprefixer": "*",
+    "gulp-plumber": "^1.0.1",
     "gulp-sass": "*"
   }
 }
