--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "gulp"
   },
   "dependencies": {
+    "react": "*",
+    "react-dom": "*",
     "superagent": "*",
     "voronoi": "*"
   },
@@ -17,6 +19,7 @@
     "babel": "*",
     "babel-core": "*",
     "babel-preset-es2015": "*",
+    "babel-preset-react": "*",
     "babelify": "*",
     "browserify": "*",
     "gulp": "*",
