--- a/package.json
+++ b/package.json
@@ -1,37 +1,34 @@
 {
   "name": "gotandajs.github.io",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "private": true,
   "engines": {
-    "node": "^4.2"
+    "node": "4"
   },
   "scripts": {
-    "start": "gulp"
+    "start": "webpack-dev-server",
+    "build": "NODE_ENV=production webpack"
   },
   "dependencies": {
-    "react": "*",
-    "react-dom": "*",
-    "superagent": "*",
-    "voronoi": "*"
+    "normalize.css": "^3.0.3",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "superagent": "^1.7.2",
+    "voronoi": "^1.0.0"
   },
   "devDependencies": {
-    "babel": "*",
-    "babel-core": "*",
+    "babel-loader": "*",
     "babel-preset-es2015": "*",
     "babel-preset-react": "*",
-    "babelify": "*",
-    "browserify": "*",
-    "gulp": "*",
-    "gulp-autoprefixer": "*",
-    "gulp-gzip": "*",
-    "gulp-plumber": "*",
-    "gulp-rename": "*",
-    "gulp-sass": "*",
-    "gulp-uglify": "*",
-    "gulp-util": "*",
-    "vinyl-buffer": "*",
-    "vinyl-source-stream": "*",
-    "watchify": "*"
+    "compression-webpack-plugin": "^0.2.0",
+    "css-loader": "*",
+    "file-loader": "*",
+    "node-sass": "*",
+    "sass-loader": "*",
+    "style-loader": "*",
+    "url-loader": "*",
+    "webpack": "*",
+    "webpack-dev-server": "*"
   }
 }
